// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message EventGroupMetadata {
  option (google.api.resource) = {
    type: "halo.wfanet.org/EventGroupMetadataDescriptor"
    pattern: "dataProviders/{ data_provider }/eventGroupMetadataDescriptors/{ event_group_metadata_descriptor }"
  };

  // Reference name of the metadata Descriptor.
  string name = 1;

  // FileDescriptorSet of the original metadata proto message.
  FileDescriptorSet descriptor_set = 2;
}